--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,18 @@
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: #fafafa;
-    color: #222;
-}
+
 header, main {
     margin-left: 5%;
     margin-right: 5%;
 }
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 0;
+  position: sticky;
+  top: 0;
+  z-index: 1000; /* para que quede por encima del contenido */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 60px;
+  background: #ffffff;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* opcional, para que resalte */
 }
 
 h1, h2 { text-align: center
@@ -36,8 +36,10 @@ button {
 }
 
 .logo, .footer-logo {
-    font-weight: bold;
-    font-size: 1.5em;
+  font-weight: bold;
+  font-size: 1.5em;
+  display: flex;           
+  align-items: center;     
 }
 nav ul {
     list-style: none;
@@ -84,22 +86,23 @@ nav a {
     margin-top: 10px;
 }
 footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    padding: 50px 50px 50px 50px;
     background: #f0f0f0;
     margin-top: 40px;
 }
 
 .footer-text {
-    margin-left: 20px;
+    max-width: 400px;
+    color: #555;
+    font-size: 0.9em;
+    line-height: 1.5em;
+    text-align: left;
 }
 .footer-menu ul {    
     gap: 8px;
-    margin: 0;
+    margin: 10px 15px 10px 15px;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 .footer-menu a {
     color: #222;
@@ -124,12 +127,25 @@ footer {
     margin-bottom: 20px;
     gap: 15px;
     text-align: center;
+    max-width: 60vw;
+    
 }
 
-.noticia-contenido {
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+.noticia-caja img {
+  max-width: 30vw;
+  height: auto;
+  border-radius: 10px;
+  display: block;
+  margin: 0 auto; 
+}
+
+.noticias-list {
+    display: flex;               
+                
+    justify-content: center;     
+    gap: 20px;                   
+    margin: 0 auto; 
+    max-width: 90vw;           
 }
 
 .vacaciones-form-img {
@@ -145,4 +161,33 @@ footer {
     height: auto;
     border-radius: 10px;
     display: block;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    padding-top: 35px;
+}
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #f6fcff !important
+    
+}
+
+.footer-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 80vw;
+  margin: 0 auto;
+  padding: 50px 0;
+}
+
+.footer-bottom {
+    background: #e0e0e0; 
+    text-align: center;
+    padding: 10px 0;
+    font-size: 0.85em;
+    color: #444;
 }
